Thu Jul  2 12:05:03 UTC 2009  Carlos O'Ryan  <coryan@glamdring>

        * tests/Compiler_Features_07_Test.cpp:
          Test for std::string

        * tests/Compiler_Features_08_Test.cpp:
          Test for std::wstring

        * tests/Compiler_Features_09_Test.cpp:
          Test for std::auto_ptr<>

        * tests/Compiler_Features_06_Test.cpp:
          Fixed typo in test name.

        * tests/run_test.lst:
        * tests/Makefile.am:
        * tests/tests.mpc:
          Add the compilation / run parafernalia.

Thu Jul  2 11:38:15 UTC 2009  Carlos O'Ryan  <coryan@glamdring>

        * tests/Compiler_Features_04_Test.cpp:
          Test for std::set<>

        * tests/Compiler_Features_05_Test.cpp:
          Test for std::queue<>, this is a different sort of test because
          std::queue<> is an adaptor, not a collection.  The default
          collection is a std::deque<>, so we are testing default template
          parameters at the same time.

        * tests/Compiler_Features_06_Test.cpp:
          Test for std::set<> with a different order function.

        * tests/run_test.lst:
        * tests/Makefile.am:
        * tests/tests.mpc:
          Add the compilation / run parafernalia.

Thu Jul  2 03:13:27 UTC 2009  Carlos O'Ryan  <coryan@glamdring>

        * tests/Makefile.am:
        * tests/tests.mpc:
        * tests/Compiler_Features_03_Test.cpp:
          This time it is std::vector<>

        * tests/run_test.lst:
          I need to remember to add the tests to the list of automatically
          executed ones.

Thu Jul  2 03:07:40 UTC 2009  Carlos O'Ryan  <coryan@glamdring>

        * tests/tests.mpc:
        * tests/Makefile.am:
        * tests/Compiler_Features_02_Test.cpp:
          Test if the std::map<> class works.

        * tests/Compiler_Features_01_Test.cpp:
          Make the tests more consistent by using typedefs.

Thu Jul  2 02:45:13 UTC 2009  Carlos O'Ryan  <coryan@glamdring>

        * tests/tests.mpc: