@@ -70,6 +70,7 @@ Compiler_Features_06_Test
 Compiler_Features_07_Test
 Compiler_Features_08_Test
 Compiler_Features_09_Test
+Compiler_Features_10_Test
 Config_Test: !LynxOS !VxWorks !ACE_FOR_TAO
 Conn_Test: !ACE_FOR_TAO
 DLL_Test: !Unicos !STATIC !KCC_Linux
