@@ -499,6 +499,13 @@ project(Compiler_Features_09_Test) : acetest {
   }
 }
 
+project(Compiler_Features_10_Test) : acetest {
+  exename = Compiler_Features_10_Test
+  Source_Files {
+    Compiler_Features_10_Test.cpp
+  }
+}
+
 project(Config Test) : acetest {
   avoids += ace_for_tao
   exename = Config_Test
